fix(statistics): 클랜 리더보드 최근 30일 적용 (TRC-298)
